--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <main>
         <header> 
+          <img src="https://images.vexels.com/media/users/3/286416/isolated/lists/eb34b3a01d5c1d143d001cf99b9f5c68-raposa-tribal-dos-vikings.png" alt="TRIBAL">
           <h1>Teste seus conhecimentos</h1></header>
       
       
